--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,44 +1,84 @@
+variables:
+  MAVEN_OPTS: "-Djava.awt.headless=true -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
+  MAVEN_CLI_OPTS_NO_TESTS: "--batch-mode -DskipTests"
+  MAVEN_CLI_OPTS_HEADLESS: "--batch-mode -P headless"
+
 stages:
   - build
   - test
+  - coverage
 
-variables:
-  MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
+.get_percentage:
+  script:
+    - missed_hit=$(cat target/site/jacoco/jacoco.xml | sed 's/.*<\/package>//;' | grep -o 'INSTRUCTION.*/>' | grep -o [0-9]*)
+    - missed=$(echo ${missed_hit} | grep -o "[0-9]* ")
+    - hit=$(echo ${missed_hit} | grep -o " [0-9]*")
+    - percentage=$(awk -v hit="${hit}" -v missed="${missed}" 'BEGIN { print  100 * hit / (hit + missed) }')
 
-before_script:
-  - mvn $MAVEN_CLI_OPTS install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+cache:
+  paths:
+    - .m2/repository
+  key: "$CI_BUILD_REF_NAME"
 
 build:
   stage: build
+  needs: []
+  before_script:
+    - cd backend
+    - apk --no-cache add maven
   script:
-    - mvn $MAVEN_CLI_OPTS clean install
+    - mvn clean install $MAVEN_CLI_OPTS_NO_TESTS
 
-test_backend:
+test:
   stage: test
+  before_script:
+    - cd backend
+    - apk --no-cache add maven
   script:
-    - mvn $MAVEN_CLI_OPTS test jacoco:report -pl backend
+    - mvn clean test $MAVEN_CLI_OPTS_HEADLESS
+    - mvn jacoco:report
   artifacts:
-    reports:
-      junit: "backend/target/surefire-reports/TEST-*.xml"
-      cobertura: "backend/target/site/cobertura/coverage.xml"
-
-spotbugs:
-  stage: test
-  script:
-    - mvn $MAVEN_CLI_OPTS spotbugs:check -pl backend
+    paths:
+      - backend/
+    expire_in: 5 days
 
 checkstyle:
   stage: test
+  needs: []
+  before_script:
+    - cd backend
+    - apk --no-cache add maven
+  script: 
+    - mvn checkstyle:check
+
+coverage: 
+  stage: coverage 
+  needs: ["test"]
+  dependencies: 
+    - test
+  before_script: 
+    - cd backend
   script:
-    - mvn $MAVEN_CLI_OPTS checkstyle:check -pl backend
-  artifacts:
-    paths:
-      - backend/target/checkstyle-result.xml
+    - !reference [.get_percentage, script]
+    - 'echo "Code Coverage core: ${percentage}%"'
+  coverage: "/Code Coverage core: ([0-9\\.]*)%/"
+
+spotbugs:
+  stage: test
+  needs: [build]
+  before_script:
+   - cd backend
+   - apk --no-cache add maven
+  script:
+    - mvn clean install $MAVEN_CLI_OPTS_NO_TESTS
+    - mvn spotbugs:check
 
 test_frontend:
   stage: test
-  script:
+  before_script: 
+    - apk --no-cache add nodejs npm
     - cd frontend
+  script:
     - npm install
     - npm test -- --coverage
   artifacts:
