--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -56,6 +56,18 @@
 	<build>
 		<plugins>
 			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+       			<artifactId>maven-compiler-plugin</artifactId>
+        		<version>3.11.0</version>
+        		<configuration>
+            		<source>17</source>
+            		<target>17</target>
+            		<compilerArgs>
+                		<arg>--enable-preview</arg>
+            		</compilerArgs>
+       			 </configuration>
+    		</plugin>
+			<plugin>
             	<groupId>org.jacoco</groupId>
             	<artifactId>jacoco-maven-plugin</artifactId>
             	<version>0.8.7</version>
