--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "react-transition-group": "^4.4.5",
     "tachyons": "^4.12.0"
   }
 }
